--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "NFT Starter Kit",
-  "name": "NFT MARKETPLACE STARTER KIT",
+  "short_name": "Flowers NFT",
+  "name": "NFT TEST Flowers environment",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "1-800-flowers-com.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
